force-app/main/default/objects/Subsidiary__c/Subsidiary__c.object-meta.xml
<CustomObject>
    <description>Used in Client Acceptance as Subsidiaries</description>
    <label>Subsidiary</label>
    <nameField>
        <label>Subsidiary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subsidiaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>