force-app/main/default/objects/Subsidiary__c/fields/Accounts__c.field-meta.xml
<CustomField>
    <fullName>Accounts__c</fullName>
    <label>Accounts</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>