force-app/main/default/objects/Subsidiary__c/fields/Confirmation_Statements_Annual_Return__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Statements_Annual_Return__c</fullName>
    <description>Confirmation Statements / Annual Return</description>
    <label>Confirmation Statements / Annual Return</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>