force-app/main/default/objects/Subsidiary__c/fields/Incorporation_Document_Memorandum_and__c.field-meta.xml
<CustomField>
    <fullName>Incorporation_Document_Memorandum_and__c</fullName>
    <description>Incorporation Document / Memorandum and/or Articles of Association / Name Changes</description>
    <label>Incorporation Document / Memorandum and/</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>